[FIX] web_responsive: fix status widget visibility
Before this change the status widget was hidden as it had no width. You
can check it installing the project module and going to a task. Now you
can see the status widget along the task name.

--- a/web_responsive/static/src/legacy/scss/web_responsive.scss
+++ b/web_responsive/static/src/legacy/scss/web_responsive.scss
@@ -168,7 +168,7 @@ html .o_web_client .o_action_manager .o_action {
         .oe_title {
             .o_field_widget:not(.oe_inline) {
                 display: block;
-                span:not(.o_field_translate) {
+                span:not(.o_field_translate):not(.o_status) {
                     display: block;
                     max-width: 100%;
                     text-overflow: ellipsis;
